# alectro

./: Cargo.toml
src/: error.rs  input.rs  lib.rs  main.rs
src/controller/: input.rs  irc.rs
src/model/: chatbuf.rs  event.rs
src/utils/: colorize.rs
src/view/: buffer.rs  style.rs  terminal.rs  ui.rs
src/view/widget/: chatbuf.rs  input.rs  mod.rs  tabline.rs
