[package]
name = "alectro"
version = "0.0.1"
description = "A textual IRC client."
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "GPL-3.0"
keywords = ["irc", "client", "tui", "termion"]
categories = ["command-line-interface", "command-line-utilities"]
documentation = "https://docs.rs/alectro/"
repository = "https://github.com/aatxe/alectro"
readme = "README.md"
edition = '2021'

[badges]
travis-ci = { repository = "aatxe/alectro" }

[dependencies]
failure = "0.1"
futures = "0.3"
irc = "1.0.0"
termion = "1.4"
tokio = {version = "1" , features = ["full"] }
tokio-stream = { version = "0.1.16" }
unicode-segmentation = "0.1"
unicode-width = "0.1"
dirs = "5.0.1"

[[bin]]
name = "alectro"
doc = false
